--- a/src/zen_screen/web/index.html
+++ b/src/zen_screen/web/index.html
@@ -33,6 +33,8 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <!-- SQLite Web Worker -->
+  <script src="sqflite_sw.js" async></script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
